# autumn

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  nixpacks.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 05394cce4945_partition_files.py  0eb301414644_initial_setup_test_2.py  1516392953b5_small_update.py  344c303f7313_small_update.py  3dd7b5148d3f_initial_setup_test.py  40839b751170_create_partition_table.py  45216bd2a713_partition_files.py  525d47ee5471_current_database_state.py  54a7ddabe5e2_fix_status_field_type.py  6369a84dbdf5_initial_setup_test_2.py  6d9669e77e5a_initial_migration.py  84fd3de2c959_add_system_prompt_at_partition_level.py  8de8bbe403e4_update_collections_table.py  e5c80b22a884_add_partition_table.py
src/: config.py  constants.py  database.py  dependencies.py  exceptions.py  factory.py  lifespan.py  main.py  manager.py  model.py  repository.py  utils.py
src/chat/: constant.py  dependencies.py  router.py  service.py
src/chat/schemas/: request.py
src/collections/: config.py  constants.py  dependencies.py  repository.py  router.py  service.py  utils.py
src/collections/models/: collection.py  repository.py
src/collections/schemas/: request.py  response.py
src/embedding/: config.py  constants.py  dependencies.py  repository.py  router.py  service.py  utils.py
src/embedding/models/: requests.py
src/embedding/schemas/: requests.py
src/embeddings/: config.py  dependencies.py  service.py
src/embeddings/models/: requests.py
src/files/: config.py  constants.py  dependencies.py  exceptions.py  repository.py  router.py  service.py
src/files/models/: file.py  repository.py
src/files/schemas/: requests.py  responses.py
src/llamaindex_patch/node_mapping/: id_tool_mapping.py
src/llamaindex_patch/stores/: qdrant_vector_store.py
src/partitions/: constants.py  dependencies.py  repository.py  router.py  service.py  utils.py
src/partitions/models/: partition.py  partition_file.py  partition_file_tool.py  partition_files.py  repository.py
src/partitions/schemas/: request.py  response.py
src/tools/: dependencies.py  service.py  tool_handler.py  utils.py
