[project]
name = "autumn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.0.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.0",
    "fastembed>=0.7.1",
    "llama-index>=0.12.47",
    "llama-index-embeddings-openai-like>=0.1.1",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-llms-openrouter>=0.3.2",
    "llama-index-readers-qdrant>=0.3.0",
    "llama-index-storage-docstore-postgres>=0.3.1",
    "llama-index-storage-index-store-postgres>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.14.3",
    "redis>=6.2.0",
    "sqlalchemy[asyncio,postgresql]>=2.0.41",
    "transformers[torch]>=4.53.2",
    "types-aioboto3[s3]>=15.0.0",
    "types-aiofiles>=24.1.0.20250708",
]

[dependency-groups]
dev = [
    "alembic>=1.16.3",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.pyright]
include = ["src"]

ignore = ["example"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
autoSearchPaths = false
reportUnknownMemberType = "warning"
reportMissingTypeArgument = "warning"
reportUnusedImport = "warning"
reportMissingImports = "error"
reportMissingTypeStubs = "information"
reportUnusedVariable = "warning"
